Opt out from receipt when updating address
Prepare client-side code in cat17 to show an opt-out checkbox, process
its value in the store and send its value to the server.

--- a/skins/cat17/src/sass/layouts/pages/update_address.scss
+++ b/skins/cat17/src/sass/layouts/pages/update_address.scss
@@ -10,7 +10,9 @@
             }
         }
         label {
-            font-size: 12px;
+            @include bkp(md) {
+                font-size: 12px;
+            }
             cursor: auto;
         }
         ::placeholder {
@@ -41,6 +43,12 @@
             margin-bottom: 16px;
             line-height: 16px;
             font-size: 12px;
+        }
+        .wrap-check label {
+            margin-bottom: 0;
+        }
+        .explanation  {
+            margin-bottom: 30px;
         }
         // This class is needed in order to go around the css rules coming from jcf components
         // which set elements to absolute and have some !important rules.
