--- a/skins/cat17/templates/AddressUpdateSuccess.html.twig
+++ b/skins/cat17/templates/AddressUpdateSuccess.html.twig
@@ -7,7 +7,13 @@
             <div class="content col-xs-12 col-sm-10 col-md-8">
                 <h1>{$ "address_update_success_head" | trans $}</h1>
 
-                <p>{$ "address_update_success_body" | trans $}</p>
+                <p>
+                    {% if receiptOptOut %}
+                        {$ "address_update_success_body_optout" | trans $}
+                    {% else %}
+                        {$ "address_update_success_body" | trans $}
+                    {% endif %}
+                </p>
 
             </div>
         </div>
