Update membership confirmation email
localizedcurrency('EUR', 'de_DE') is replaced with
number_format(2, ',','.') because the emails now required the word
"Euro" to be written after the currency which is not possible with the
localizedcurrency function.

T202862

--- a/app/mail_templates/Membership_Application_Confirmation.txt.twig
+++ b/app/mail_templates/Membership_Application_Confirmation.txt.twig
@@ -1,4 +1,4 @@
-{%- set formattedAmount = membershipFee|localizedcurrency('EUR', 'de_DE') -%}
+{%- set formattedAmount = membershipFee|number_format(2, ',', '.') -%}
 {% if membershipType == 'sustaining' %}
 {$- greeting_generator.createInformalLastnameGreeting( salutation, lastName )|raw $}
 {% else %}
@@ -7,11 +7,12 @@
 
 {$ mail_content('membership_application_confirmation/intro', {
     'formatted_amount': formattedAmount,
-    'donation_interval': paymentIntervalInMonths|trans({}, 'paymentIntervals')
+    'donation_interval': paymentIntervalInMonths|trans({}, 'paymentIntervals'),
+	'membership_type': membershipType|trans({}, 'membershipTypes'),
 }) $}
 
 {$ mail_content('membership_application_confirmation/contact', {
-    'membership_type': membershipType|trans( {}, 'membershipTypes' ),
+    'membership_type': membershipType|trans({}, 'membershipTypes'),
 }) $} {% if hasReceiptEnabled == false %} {$- mail_content('membership_application_confirmation/receipt') $} {% endif %}
 
 
