Add Euro currency to formatted amount text

--- a/app/mail_templates/Membership_Application_Confirmation.txt.twig
+++ b/app/mail_templates/Membership_Application_Confirmation.txt.twig
@@ -1,4 +1,4 @@
-{%- set formattedAmount = membershipFee|number_format(2, ',', '.') -%}
+{%- set formattedAmount = membershipFee|number_format(2, ',', '.') ~ ' Euro' -%}
 {% if membershipType == 'sustaining' %}
 {$- greeting_generator.createInformalLastnameGreeting( salutation, lastName )|raw $}
 {% else %}
