Track payment dimension of donation/new route
https://phabricator.wikimedia.org/T228401

--- a/skins/10h16/templates/Piwik.twig
+++ b/skins/10h16/templates/Piwik.twig
@@ -1,6 +1,9 @@
 <!-- Piwik -->
 <script type="text/javascript">
 	var _paq = _paq || [];
+	{% if initialFormValues.paymentType != '' %}
+		_paq.push( [ 'setCustomDimension', 1, '{$ initialFormValues.paymentType $}' ] );
+	{% endif %}
 	_paq.push( [ 'trackPageView', '{$ main_template $}' ] );
 	_paq.push( [ 'enableLinkTracking' ] );
 	_paq.push( [ 'trackAllContentImpressions' ] );
