Rename donation forms of 10h16

--- a/skins/10h16/templates/Donation_Form_Personal_Data.html.twig
+++ b/skins/10h16/templates/Donation_Form_Personal_Data.html.twig
@@ -1,4 +1,4 @@
-<form name="donForm2" id="donForm2" method="POST" action="{$ basepath $}/donation/add">
+<form name="10h16-donation-personal-data" id="10h16-donation-personal-data" method="POST" action="{$ basepath $}/donation/add">
     <section id="donation-amount" class="container clearfix">
         <div class="ltcol">
             &nbsp;
