--- a/skins/10h16/templates/Donation_Form_Payment.html.twig
+++ b/skins/10h16/templates/Donation_Form_Payment.html.twig
@@ -1,4 +1,4 @@
-<form name="donForm1" id="donForm1" method="POST" action="#">
+<form name="10h16-donation-payment" id="10h16-donation-payment" method="POST" action="#">
 
     <!-- steps-overview -->
     <div class="steps-overview container clearfix">
