Rename donation form of cat17

--- a/skins/cat17/templates/Donation_Form.html.twig
+++ b/skins/cat17/templates/Donation_Form.html.twig
@@ -20,7 +20,7 @@
 		</div>
 	</div>
 
-	<form id="form-donation" class="main-form" action="{$ basepath $}/donation/add" method="post" novalidate>
+	<form id="cat17-donation" class="main-form" action="{$ basepath $}/donation/add" method="post" novalidate>
 		<div class="container">
 			<section class="state-bar state-overview col-xs-12 ">
 				<div class="wrap-bar container ">
