--- a/skins/cat17/templates/partials/donation_confirmation/donor_form.html.twig
+++ b/skins/cat17/templates/partials/donation_confirmation/donor_form.html.twig
@@ -1,6 +1,6 @@
 {% set COUNTRIES = [ 'DE', 'AT', 'CH', 'BE', 'IT', 'LI', 'LU' ] %}
 
-<form id="form-donation" class="main-form hidden-print" action="{$ basepath $}/donation/update?accessToken={$ donation.accessToken $}" method="post" novalidate>
+<form id="cat17-donation" class="main-form hidden-print" action="{$ basepath $}/donation/update?accessToken={$ donation.accessToken $}" method="post" novalidate>
 	<input type="hidden" name="updateToken" value="{$ donation.updateToken $}" />
 	<input type="hidden" name="donation_id" value="{$ donation.id $}" />
 	<div class="container">
