Rename membership form of cat17

--- a/skins/cat17/src/sass/layouts/_membership.scss
+++ b/skins/cat17/src/sass/layouts/_membership.scss
@@ -131,7 +131,7 @@
 		}
 	}
 
-	#form-donation .jcf-select.jcf-select-jcf-hidden.jcf-drop-active.jcf-focus, #form-donation .jcf-select.jcf-select-jcf-hidden.jcf-drop-active.jcf-focus * {
+	#cat17-donation .jcf-select.jcf-select-jcf-hidden.jcf-drop-active.jcf-focus, #cat17-donation .jcf-select.jcf-select-jcf-hidden.jcf-drop-active.jcf-focus * {
 		border-color: $brand-primary-membership !important;
 	}
 
