--- a/skins/cat17/templates/Membership_Application.html.twig
+++ b/skins/cat17/templates/Membership_Application.html.twig
@@ -58,7 +58,7 @@
 		</div>
 	</div>
 
-	<form id="form-membership" class="main-form" action="{$ basepath $}/apply-for-membership" method="post" novalidate="">
+	<form name="cat17-membership" id="form-membership" class="main-form" action="{$ basepath $}/apply-for-membership" method="post" novalidate="">
 		<div class="container">
 			<section class="state-bar state-overview col-xs-12 ">
 				<div class="wrap-bar container ">
