Rename contact form

--- a/skins/10h16/templates/contact_form.html.twig
+++ b/skins/10h16/templates/contact_form.html.twig
@@ -4,7 +4,7 @@
 
 {% block main %}
 
-  <form method="post" action="{$ basepath $}/contact/get-in-touch" novalidate="">
+  <form name="10h16-contact" method="post" action="{$ basepath $}/contact/get-in-touch" novalidate="">
     <section id="contact-form">
       <div class="container clearfix">
         <div class="ltcol">
