--- a/skins/cat17/templates/contact_form.html.twig
+++ b/skins/cat17/templates/contact_form.html.twig
@@ -6,7 +6,7 @@
 
 {% block main %}
 	<div class="container">
-		<form method="post" action="{$ basepath $}/contact/get-in-touch"  id="contact-form" class="row">
+		<form name="cat17-contact" method="post" action="{$ basepath $}/contact/get-in-touch"  id="contact-form" class="row">
 			<div class="content col-xs-12 col-sm-6 col-md-8">
 				<h2 class="h1">Kontakt</h2>
 				<div class="row">
