Add form names and restore form ids for 10h16

--- a/skins/10h16/templates/Membership_Application_Form.html.twig
+++ b/skins/10h16/templates/Membership_Application_Form.html.twig
@@ -1,5 +1,5 @@
 <!-- become member -->
-<form name="10h16-membership" id="10h16-membership" method="POST" action="{$ basepath $}/apply-for-membership">
+<form name="10h16-membership" id="memForm" method="POST" action="{$ basepath $}/apply-for-membership">
 
 	<!-- header box -->
 	<section id="become-member">
