--- a/skins/10h16/templates/Membership_Application_Embedded.html.twig
+++ b/skins/10h16/templates/Membership_Application_Embedded.html.twig
@@ -18,7 +18,7 @@
 	{% include 'Membership_Application_Bank_Data_Confirmation.html.twig' %}
 </div>
 
-<script id="10h16-donation" src="{$ basepath|e('html_attr') $}/skins/10h16/_js/membershipForm.js"
+<script id="init-form" name="10h16-membership" src="{$ basepath|e('html_attr') $}/skins/10h16/_js/membershipForm.js"
 		data-initial-form-values="{% if initialFormValues %}{$ initialFormValues|merge({'paymentType': initialPaymentType})|json_encode|e('html_attr') $}{% else %}{$ {'paymentType': initialPaymentType}|json_encode|e('html_attr') $}{% endif %}"
 		data-violated-fields="{% if violatedFields %}{$ violatedFields|json_encode|e('html_attr') $}{% else %}{}{% endif %}"
 		data-validate-fee-url="{$ basepath|e('html_attr') $}/validate-fee"
