Hide various page elements for A/B/C test
Revert this commit later
https://phabricator.wikimedia.org/T226387

--- a/skins/10h16/templates/Donation_Form_Payment.html.twig
+++ b/skins/10h16/templates/Donation_Form_Payment.html.twig
@@ -56,7 +56,7 @@
             </div>
         </div>
 
-        <div class="rtcol">
+        <div class="rtcol" style="display: none">
 
             <div class="icon-hand-right _icon-list-item">
                 <p>
