--- a/skins/cat17/templates/partials/Page_Footer.html.twig
+++ b/skins/cat17/templates/partials/Page_Footer.html.twig
@@ -17,7 +17,7 @@
 			</div>
 			<nav class="menu menu-footer col-xs-12 col-sm-4 col-md-4">
 				<ul class="list-menu list-unstyled">
-					<li>
+					<li style="display: none">
 						<a href="{$ path( 'contact' ) $}">
 							<span>Kontakt</span>
 						</a>
