--- a/app/mail_templates/Donation_Confirmation.txt.twig
+++ b/app/mail_templates/Donation_Confirmation.txt.twig
@@ -1,4 +1,4 @@
-{%- set formattedAmount = donation.amount|number_format(2, ',', '.') -%}
+{%- set formattedAmount = donation.amount|number_format(2, ',', '.')  ~ ' Euro' -%}
 {$ greeting_generator.createInformalLastnameGreeting( recipient.salutation, recipient.lastName )|raw $}
 
 {% if donation.needsModeration %}{# Moderated emails look completely different #}
