--- a/skins/laika/src/scss/variables.scss
+++ b/skins/laika/src/scss/variables.scss
@@ -84,6 +84,9 @@ $subtitle-size: $size-8;
 $subtitle-color: $fun-color-dark;
 $subtitle-weight: bold;
 
+// Footer
+$footer-padding: 3rem $column-gap 6rem;
+
 // Header / Navbar
 $navbar-height: 5.2rem;
 $navbar-box-shadow-size: 1px 2px 3px;
