--- a/skins/laika/src/scss/overrides.scss
+++ b/skins/laika/src/scss/overrides.scss
@@ -31,9 +31,9 @@
 
 .b-radio.radio {
 	height: auto;
-	width: 284px;
+	width: $fun-min-width;
 	@include from($tablet) {
-		width: 320px;
+		width: $fun-max-width;
 	}
     border-bottom: 2px solid $fun-color-gray-light-transparency;
 	align-items: flex-start;
@@ -74,7 +74,7 @@
 }
 
 .input, .field {
-	max-width: 300px;
+	max-width: $fun-max-width;
 }
 
 .input {
@@ -138,6 +138,7 @@ button.is-low {
 	border: 2px solid $fun-color-gray-light-solid;
 	border-radius: $radius;
 	padding: 36px;
+	overflow-y: auto;
 	.icon.icon-size {
 		float: right;
 		padding: 0;
