Add safari specific css selectors for autofill

--- a/skins/laika/src/scss/custom.scss
+++ b/skins/laika/src/scss/custom.scss
@@ -134,6 +134,23 @@
 	}
 }
 
+// Workaround for firing events on Safari's autofill
+// see T231319
+&:-webkit-autofill {
+	// Expose a hook for JavaScript when auto fill is shown.
+	// JavaScript can capture 'animationstart' events
+	animation-name: onAutoFillStart;
+
+	// Make the backgound color become yellow _really slowly_
+	transition: background-color 50000s ease-in-out 0s;
+}
+
+&:not( :-webkit-autofill ) {
+	// Expose a hook for JS onAutoFillCancel
+	// JavaScript can capture 'animationstart' events
+	animation-name: onAutoFillCancel;
+}
+
 // Import Bulma and Buefy styles
 @import "~bulma";
 @import "~buefy/src/scss/buefy";
