--- a/skins/laika/src/scss/custom.scss
+++ b/skins/laika/src/scss/custom.scss
@@ -134,18 +134,17 @@
 	}
 }
 
-// Workaround for firing events on Safari's autofill
-// see T231319
-&:-webkit-autofill {
-	// Expose a hook for JavaScript when auto fill is shown.
+@keyframes onAutoFillStart {  from {/**/}  to {/**/}}
+@keyframes onAutoFillCancel {  from {/**/}  to {/**/}}
+input:-webkit-autofill {
+	// Expose a hook for JavaScript when autofill is shown
 	// JavaScript can capture 'animationstart' events
 	animation-name: onAutoFillStart;
-
-	// Make the backgound color become yellow _really slowly_
+	
+	// Make the background color become yellow really slowly
 	transition: background-color 50000s ease-in-out 0s;
 }
-
-&:not( :-webkit-autofill ) {
+input:not(:-webkit-autofill) {
 	// Expose a hook for JS onAutoFillCancel
 	// JavaScript can capture 'animationstart' events
 	animation-name: onAutoFillCancel;
