--- a/skins/laika/src/scss/custom.scss
+++ b/skins/laika/src/scss/custom.scss
@@ -136,18 +136,17 @@
 
 @keyframes onAutoFillStart {  from {/**/}  to {/**/}}
 @keyframes onAutoFillCancel {  from {/**/}  to {/**/}}
-input:-webkit-autofill {
-	// Expose a hook for JavaScript when autofill is shown
-	// JavaScript can capture 'animationstart' events
-	animation-name: onAutoFillStart;
-	
-	// Make the background color become yellow really slowly
-	transition: background-color 50000s ease-in-out 0s;
-}
-input:not(:-webkit-autofill) {
-	// Expose a hook for JS onAutoFillCancel
-	// JavaScript can capture 'animationstart' events
-	animation-name: onAutoFillCancel;
+.input-wrapper {
+	input:-webkit-autofill {
+		animation: onAutoFillStart 10s;
+		-moz-animation: onAutoFillStart 10s; /* Firefox */
+		-webkit-animation: onAutoFillStart 10s; /* Safari and Chrome */ 
+	}
+	input:not(:-webkit-autofill) {
+		animation: onAutoFillCancel 10s;
+		-moz-animation: onAutoFillCancel 10s; /* Firefox */
+		-webkit-animation: onAutoFillCancel 10s; /* Safari and Chrome */ 
+	}
 }
 
 // Import Bulma and Buefy styles
