Make IBAN on confirmation page more readable.
Add spaces in the markup that will not be copied when selecting and
pasting as plain text.

This is for https://phabricator.wikimedia.org/T238913

--- a/skins/10h16/templates/Donation_Confirmation.html.twig
+++ b/skins/10h16/templates/Donation_Confirmation.html.twig
@@ -88,8 +88,8 @@
 					<div class="container payment">
 						<span class="label">Kontoinhaber</span>Wikimedia Foerdergesellschaft<br/>
 						<span class="label">Betrag</span>{$ formattedAmount $}<br/>
-						<span class="label">IBAN</span>DE33100205000001194700<br/>
-						<span class="label">BIC</span>BFSWDE33BER<br/>
+						<span class="label">IBAN</span><span class="digit-group">DE33</span><span class="digit-group">1002</span><span class="digit-group">0500</span><span class="digit-group">0001</span><span class="digit-group">1947</span><span class="digit-group">00</span><br/>
+						<span class="label">BIC</span><span class="digit-group">BFSW</span><span class="digit-group">DE33</span><span class="digit-group">BER</span><br/>
 						<span class="label">Kontonummer</span>1194700<br/>
 						<span class="label">Bankleitzahl</span>10020500<br/>
 						<span class="label">Bank</span>Bank für Sozialwirtschaft<br/>
