Update links for membership info

--- a/skins/10h16/templates/Membership_Application_Confirmation.html.twig
+++ b/skins/10h16/templates/Membership_Application_Confirmation.html.twig
@@ -24,7 +24,7 @@
 					<strong>Mehr Informationen</strong>
 				</p>
 				<p>
-					Erfahren Sie <a href="http://wikimedia.de/wiki/Mitgliedschaft" target="_blank">mehr</a> &uuml;ber Wikimedia Deutschland e. V. und seine Aktivit&auml;ten.
+					Erfahren Sie <a href="http://wikimedia.de/mitglieder" target="_blank">mehr</a> &uuml;ber Wikimedia Deutschland e. V. und seine Aktivit&auml;ten.
 				</p>
 			</div>
 		</div>
