--- a/skins/10h16/templates/Membership_Application_Form.html.twig
+++ b/skins/10h16/templates/Membership_Application_Form.html.twig
@@ -60,7 +60,7 @@
 						<strong>Mehr Informationen</strong>
 					</p>
 					<p>
-						Erfahren Sie <a href="http://wikimedia.de/wiki/Mitgliedschaft{% if trackOutgoingLinks is defined and trackOutgoingLinks == true %}?piwik_campaign=Spendenseite&piwik_kwd=membership-form-sidebar{% endif %}" target="_blank">mehr</a>
+						Erfahren Sie <a href="http://wikimedia.de/mitglieder{% if trackOutgoingLinks is defined and trackOutgoingLinks == true %}?piwik_campaign=Spendenseite&piwik_kwd=membership-form-sidebar{% endif %}" target="_blank">mehr</a>
 					</p>
 				</div>
 			</div>
