Remove translations from presentation layer
Remove the Translator instance from Twig initialization and the `trans`
filter from the twig templates.

All translated values that have to be rendered in HTML generated by the
PHP side instead of the client-side are stored in the new
`siteMetadata.json` file, assigned to all templates.

Change tests that access content on the confirmation page to use
assigned values instead of rendered output.

--- a/skins/test/templates/Base_Layout.html.twig
+++ b/skins/test/templates/Base_Layout.html.twig
@@ -22,7 +22,7 @@
         <noscript class="no-js-fallback">
             <main>
                 <div class="content container">
-                    <h2>{$ 'no_javascript_title' | trans $}</h2>
+                    <h2>{$ site_metadata.no_javascript_title $}</h2>
                     {$ web_content( 'pages/no_javascript' ) $}
                 </div>
             </main>
