--- a/skins/test/templates/Confirm_Subscription.twig
+++ b/skins/test/templates/Confirm_Subscription.twig
@@ -1,6 +1,6 @@
 
 {% if error_message %}
-    {$ include( 'Warning_Page.html.twig', { 'message': error_message|trans( {}, 'validations' ) } ) $}
+    {$ include( 'Warning_Page.html.twig', { 'message': error_message } ) $}
 {% else %}
     {$ include( 'Subscription_Confirmed.html.twig' ) $}
 {% endif %}
