--- a/skins/test/templates/Page_Not_Found.html.twig
+++ b/skins/test/templates/Page_Not_Found.html.twig
@@ -1,5 +1,5 @@
 {% extends 'Base_Layout.html.twig' %}
 
 {% block main %}
-	{$ message|default( 'page_not_found' )|trans()|raw $}
+	{$ message|default( site_metadata.page_not_found )|raw $}
 {% endblock %}
