--- a/app/mail_templates/Donation_Confirmation.txt.twig
+++ b/app/mail_templates/Donation_Confirmation.txt.twig
@@ -5,21 +5,19 @@
 	{$ mail_content('donation_confirmation/needs_moderation', {
 		'formatted_amount': formattedAmount
 	}) $}
-	{$ mail_content('donation_confirmation/greetings', {
-		'day_of_the_week': "now"|date("N")|trans({}, 'daysOfTheWeek')
-	}) $}
+	{$ mail_content('donation_confirmation/greetings', { 'day_of_the_week': day_of_the_week } ) $}
 {% else %}
 	{% if donation.paymentType == 'UEB' %}
 		{$ mail_content('donation_confirmation/paymenttype_banktransfer', {
 			'formatted_amount': formattedAmount,
 			'bank_transfer_code': donation.bankTransferCode,
 			'donation_id': donation.id,
-			'donation_interval': donation.interval|trans({}, 'paymentIntervals')
+			'donation_interval': donation.interval|payment_interval
 		}) $}
 
 		{% if donation.interval > 0 %}
 			{$ mail_content('donation_confirmation/paymenttype_banktransfer_interval', {
-				'donation_interval': ( 'donation_payment_interval_' ~ donation.interval ) | trans
+				'donation_interval': donation.interval|payment_interval
 			}) -$}
 		{% else %}
 			{$ mail_content('donation_confirmation/paymenttype_banktransfer_once') $}
@@ -28,7 +26,7 @@
 		{$- mail_content('donation_confirmation/payment_intro', {
 			'formatted_amount': formattedAmount,
 			'donation_id': donation.id,
-			'donation_interval': donation.interval|trans({}, 'paymentIntervals')
+			'donation_interval': donation.interval|payment_interval
 		}) -$}
 		{% if donation.paymentType == 'BEZ' %}
 			{$- mail_content('donation_confirmation/paymenttype_directdebit', {
@@ -38,7 +36,7 @@
 		{% elseif donation.paymentType == 'PPL' or donation.paymentType == 'MCP' or donation.paymentType == 'SUB' %}
 			{$- mail_content('donation_confirmation/paymenttype_external', {
 				'formatted_amount': formattedAmount,
-				'payment_provider': donation.paymentType|trans({}, 'paymentTypes')
+				'payment_provider': donation.paymentType|payment_method
 			}) -$}
 			{% if donation.interval > 0 %}
 				{$- mail_content('donation_confirmation/payment_interval_recurring') $}
@@ -64,9 +62,7 @@
 		} ) $}
 	{% endif %}
 
-	{$ mail_content('donation_confirmation/greetings', {
-		'day_of_the_week': "now"|date("N")|trans({}, 'daysOfTheWeek')
-	}) $}
+	{$ mail_content('donation_confirmation/greetings', { 'day_of_the_week': day_of_the_week } ) $}
 {% endif %}
 
 {$ mail_content('name_head_of_suborganization') $}
