Remove TODO comments
Removed two TODO comments as part of the "Daily Code Quality Challenge".
Day 2 of the challenge was about removing TODOs.

After some investigation, the removed TODO in
AddIndicatorAttributeForJsonRequests does not make sense and isn't a
necessary improvement.

Fixed issues found during the investigation.

--- a/skins/laika/templates/Confirm_Subscription.twig
+++ b/skins/laika/templates/Confirm_Subscription.twig
@@ -1,7 +1,7 @@
 {% extends 'Base_Layout.html.twig' %}
 
 {% block main %}
-    {# TODO Either throw away HTML presenter or create Vue class that integrates with rendered web_content   #}
+    {# Since the subscription feature is currently unused, we don't have a Vue class that renders anything  #}
     {% if error_message %}
         {$ error_message $}
     {% else %}
