--- a/skins/laika/templates/Donation_Form.html.twig
+++ b/skins/laika/templates/Donation_Form.html.twig
@@ -2,5 +2,5 @@
 
 {% block scripts %}
 	{$ parent() $}
-	<script src="{% if assets_path %}{$ assets_path $}{% else %}{$ basepath $}/skins/laika{% endif %}/js/donation_form.js"></script>
+	<script src="{$ asset( 'js/donation_form.js', 'skin' ) $}"></script>
 {% endblock %}
