--- a/skins/laika/templates/Frequent_Questions.html.twig
+++ b/skins/laika/templates/Frequent_Questions.html.twig
@@ -11,11 +11,11 @@
 		 class="is-hidden"
 		 data-application-vars="{$ faq_content|e('html_attr') $}"
 		 data-application-messages="{$ translations()|e('html_attr') $}"
-		 data-assets-path="{% if assets_path %}{$ assets_path $}{% else %}{$ basepath $}/skins/laika{% endif %}">
+		 data-assets-path="{$ asset( '', 'skin') $}">
 	</div>
 {% endblock %}
 
 {% block scripts %}
 	{$ parent() $}
-	<script src="{% if assets_path %}{$ assets_path $}{% else %}{$ basepath $}/skins/laika{% endif %}/js/frequent_questions.js"></script>
+	<script src="{$ asset( 'js/frequent_questions.js', 'skin' ) $}"></script>
 {% endblock %}
