--- a/skins/laika/templates/page_layouts/base.html.twig
+++ b/skins/laika/templates/page_layouts/base.html.twig
@@ -17,12 +17,12 @@
 		data-page-content="{$ content | e('html_attr') | raw $}"
 		data-application-vars="{$ _context|json_encode|e('html_attr') $}"
 		data-application-messages="{$ translations()|e('html_attr') $}"
-		data-assets-path="{% if assets_path %}{$ assets_path $}{% else %}{$ basepath $}/skins/laika{% endif %}">
+		data-assets-path="{$ asset( '', 'skin') $}">
 	</div>
 
 {% endblock %}
 
 {% block scripts %}
 	{$ parent() $}
-	<script src="{% if assets_path %}{$ assets_path $}{% else %}{$ basepath $}/skins/laika{% endif %}/js/static_page.js"></script>
+	<script src="{$ asset( 'js/static_page.js', 'skin' ) $}"></script>
 {% endblock %}
