--- a/skins/laika/templates/page_layouts/privacy_protection.html.twig
+++ b/skins/laika/templates/page_layouts/privacy_protection.html.twig
@@ -15,9 +15,9 @@
 		data-page-id="{$ page_id $}"
 		data-page-title="{$ title | e('html_attr') $}"
 		data-page-content="{$ content | e('html_attr') | raw $}"
-		data-application-vars="{$ _context|json_encode|e('html_attr') $}" 
-		data-application-messages="{$ translations()|e('html_attr') $}" 
-		data-assets-path="{% if assets_path %}{$ assets_path $}{% else %}{$ basepath $}/skins/laika{% endif %}"
+		data-application-vars="{$ _context|json_encode|e('html_attr') $}"
+		data-application-messages="{$ translations()|e('html_attr') $}"
+		data-assets-path="{$ asset( '', 'skin') $}"
 		data-tracking-url="{$ piwik.baseUrl | e('html_attr') $}">
 	</div>
 </div>
@@ -25,5 +25,5 @@
 
 {% block scripts %}
 	{$ parent() $}
-	<script src="{% if assets_path %}{$ assets_path $}{% else %}{$ basepath $}/skins/laika{% endif %}/js/privacy_protection.js"></script>
+	<script src="{$ asset( 'js/privacy_protection.js', 'skin' ) $}"></script>
 {% endblock %}
