--- a/skins/laika/templates/Funds_Usage.html.twig
+++ b/skins/laika/templates/Funds_Usage.html.twig
@@ -9,7 +9,7 @@
     </div>
     <div id="appdata"
          class="is-hidden"
-         data-application-vars="{$ use_of_funds_content|e('html_attr') $}"
+         data-application-vars="{$ _context|json_encode|e('html_attr') $}"
          data-application-messages="{$ translations()|e('html_attr') $}"
          data-assets-path="{% if assets_path %}{$ assets_path $}{% else %}{$ basepath $}/skins/laika{% endif %}">
     </div>
